--- a/notebooks/1_Introduction/basic_operations.ipynb
+++ b/notebooks/1_Introduction/basic_operations.ipynb
@@ -59,9 +59,9 @@
    "source": [
     "# Launch the default graph.\n",
     "with tf.Session() as sess:\n",
-    "    print \"a: %i\" % sess.run(a), \"b: %i\" % sess.run(b)\n",
-    "    print \"Addition with constants: %i\" % sess.run(a+b)\n",
-    "    print \"Multiplication with constants: %i\" % sess.run(a*b)"
+    "    print(\"a: %i\" % sess.run(a), \"b: %i\" % sess.run(b))\n",
+    "    print(\"Addition with constants: %i\" % sess.run(a+b))\n",
+    "    print(\"Multiplication with constants: %i\" % sess.run(a*b))"
    ]
   },
   {
@@ -113,8 +113,8 @@
     "# Launch the default graph.\n",
     "with tf.Session() as sess:\n",
     "    # Run every operation with variable input\n",
-    "    print \"Addition with variables: %i\" % sess.run(add, feed_dict={a: 2, b: 3})\n",
-    "    print \"Multiplication with variables: %i\" % sess.run(mul, feed_dict={a: 2, b: 3})"
+    "    print(\"Addition with variables: %i\" % sess.run(add, feed_dict={a: 2, b: 3}))\n",
+    "    print(\"Multiplication with variables: %i\" % sess.run(mul, feed_dict={a: 2, b: 3}))"
    ]
   },
   {
@@ -192,7 +192,7 @@
     "# The output of the op is returned in 'result' as a numpy `ndarray` object.\n",
     "with tf.Session() as sess:\n",
     "    result = sess.run(product)\n",
-    "    print result"
+    "    print(result)"
    ]
   }
  ],
@@ -205,7 +205,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2.0
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
